# rustmade

./: Cargo.toml
src/: main.rs
